Expand lucene reference resolver tests to object and geo_point types (#16142)